suggestions/static/suggestions/index.css
/* ... */
.intro {
    text-align: center;
    font-size: 2rem;
    margin-top: 20vh;

}

.intro .welcome {
    opacity: 87%;
    font-size: 3rem;
    font-weight: normal;
}

.mobile-br {
    display: none;
}

.intro .welcome2 {
    opacity: 60%;
}

.started-button {
    margin-top: 15rem;
    text-align: center;
}

.started-button button {
    border-color: white;
    -webkit-transition: border-color 150ms ease-in;
    -moz-transition: border-color 150ms ease-in; 
    -o-transition: border-color 150ms ease-in; 
    transition: border-color 150ms ease-in;
    border-width: 0.15rem;
    opacity: 87%;
    border-radius: 2rem;
    padding: 1.5rem;
    background: none;
    color: white;
    font-size: 2rem;
    justify-content: center;
    font-family: inherit;
}

.started-button button:hover {
    border-color: #BB86FC;
    cursor: pointer;
}

.started-button button:focus {
    outline: none;
}

.second {
    height: 100vh;
    width: 100vw;
    text-align: center;
    font-size: 2rem;
    max-width: 100%;
    float: left;
}

.player-choice {
    opacity: 87%;
    margin-top: 30vh;
    margin-bottom: 15vh;
    margin-left: 10vw;
    margin-right: 10vw;
}
.control {
    margin-left: 20%;
    margin-right: 20%;
    justify-content: center;
}


.multiplayer-button button, .singleplayer-button button {
    opacity: 60%;
    border-color: white;
    -webkit-transition: border-color, opacity 150ms ease-in;
    -moz-transition: border-color, opacity 150ms ease-in; 
    -o-transition: border-color, opacity 150ms ease-in; 
    transition: border-color, opacity 150ms ease-in;
    border-width: 0.15rem;;
    border-radius: 2rem;
    padding: 1.2rem;
    width: 50%;
    background: none;
    color: white;
    font-size: 2rem;
    justify-content: center;
    font-family: inherit;
}

.singleplayer-button button {
    margin-top: 1rem;
}

.multiplayer-button button:hover, .singleplayer-button button:hover {
    border-color: #BB86FC;
    cursor: pointer;
    opacity: 87%
}

.multiplayer-button button:focus, .singleplayer-button button:focus {
    outline: none;
    opacity: 87%
}

.third-multi {
    height: 100vh;
    width: 100vw;
    text-align: center;
    max-width: 100%;
    float: left;
}

.multi-choice {
    font-size: 2rem;
    opacity: 87%;
    margin-top: 30vh;
}

.competitive-button button, .coop-button button {
    opacity: 60%;
    border-color: white;
    -webkit-transition: border-color, opacity 150ms ease-in;
    -moz-transition: border-color, opacity 150ms ease-in; 
    -o-transition: border-color, opacity 150ms ease-in; 
    transition: border-color, opacity 150ms ease-in;
    border-width: 0.15rem;;
    border-radius: 2rem;
    padding: 1.2rem;
    width: 40%;
    background: none;
    color: white;
    font-size: 2rem;
    justify-content: center;
    font-family: inherit;
}

.coop-button button {
    margin-top: 1rem;
}

.competitive-button button:hover, .coop-button button:hover {
    border-color: #BB86FC;
    cursor: pointer;
    opacity: 87%
}

.competitive-button button:focus, .coop-button button:focus {
    outline: none;
    opacity: 87%
}

.tags-canvas {
    height: 100vh;
    width: 100vw;
    font-size: 2rem;
    justify-content: center;
    max-width: 100%;
    float: left;
    position: relative;
}

.canvas-text {
    opacity: 87%;
    font-size: 3rem;
    text-align: center;
}

.tags-advice {
    opacity: 60%;
    font-size: 1.5rem;
    text-align: center;
}

.tags-grid {
    margin-top: 5vh;

    display: grid;
    grid-gap: 2rem;
    justify-content: space-evenly;
    grid-template-columns:  15vw 15vw 15vw 15vw;
}

.tag-card {
    opacity: 70%;
    padding: 1rem;
    width: 15vw;
    border-style: solid;
    border-color: white;
    border-radius: 1.5rem;
    text-align: center;
    border-width: 0.15rem;
    -webkit-transition: border-color 200ms ease-in;
    -moz-transition: border-color 200ms ease-in; 
    -o-transition: border-color 200ms ease-in; 
    transition: border-color 200ms ease-in;
    font-size: 1.5rem;
}

.tag-card:hover {
    cursor: pointer;
}

.submitter-parent {
    display: flex;
    justify-content: center;
    position: absolute;
    bottom: 5vh;
    width: 100%;
}

.submitter {
    opacity: 87%;
    padding: 1rem;
    width: 30vw;
    border-style: solid;
    border-width: 0.15rem;
    border-radius: 2rem;
    text-align: center;
    -webkit-transition: border-color 200ms ease-in;
    -moz-transition: border-color 200ms ease-in; 
    -o-transition: border-color 200ms ease-in; 
    transition: border-color 200ms ease-in;
}

.submitter:hover {
    border-color: #BB86FC;
    color: #BB86FC;
    cursor: pointer;
}

.selected {
    border-color: #BB86FC;
    opacity: 87%;
}

.fourth {
    min-height: 100vh;
    width: 100vw;
    justify-content: center;
    max-width: 100%;
    float: left;
}

.games {
    
    margin-top: 30vh;
    margin-bottom: 10vh;
    margin-left: 10vw;
    margin-right: 10vw;
}

.game {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 5vh;
    min-height: 100vh;
    max-height: 100vh;
    margin-left: 15vw;
    margin-right: 15vw; 
}

.content-parent {
    margin-bottom: 20vh;
}

.game-name {
    font-size: 2.5rem;
    opacity: 87%;
    text-align: center;
}

.image-parent {
    display: flex;
    justify-content: center;
    width: 100%;
    max-width: 100%;
    margin-top: 2vh;
    margin-bottom: 2vh;
}


.image-child {
    margin-left: auto;
    margin-right: auto;
    min-width: 20vw;
}

.game-price {
    text-align: center;
    opacity: 87%;
    font-size: 1.7rem;
}

.game-description {
    opacity: 60%;
    text-align: center;
}


.arrow-parent {
    position: absolute;
    bottom: 5vh;
    left: 0;
    width: 100%;

    text-align: center;
    flex: 0 0 auto;
}

.arrow-child {
    display: inline-block;
    flex: 0 0 auto;
    margin: 0 auto;
    display: block;
    max-width: 3vw;
}

.arrow-child:hover {
    cursor: pointer;
}
/* ... */

